--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <div class='ingredients-recipes-box'>
   <div id='recipes' ng-controller='LinksController'>
     <form id='searchForm' ng-submit='getLinks(recipeGet)'>
-      <input class='recipe-search' type='text' ng-model='recipeGet' placeholder='Search for a recipe!'>
+      <input class='recipe-search' type='text' ng-model='recipeGet' style='font-size:14px' placeholder='Search for a recipe!'>
       <input class='recipe-submit' type='submit' id='submit' value='Submit'>
     </form>
     <div class='recipe-list' style='overflow:scroll; height:400px'>
     <div ng-repeat='data in repeatData'>
       <br><a href='http://yummly.com/recipe/{{data.links}}' target='_blank'>{{data.recipes}}</a>
+      <button id='save'>Save</button>
       <button id='cook' ng-click='getIngredients(data)'>Cook!</button></br>
     </div>
   </div>
@@ -21,6 +22,11 @@
 
   <div id='ingredients'>
     <div class='ingredient-list' style='overflow:scroll; height400px'>
+    </div>
+  </div>
+
+  <div id='recipe-book'>
+    <div class='saved-recipes'>
     </div>
   </div>
 </div>
