last changes to MVP

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   </head>
 
 <body>
-  <div class='ingredients-recipes-box'>
-  <div id='recipes' ng-controller='LinksController'>
+  <div class='ingredients-recipes-box' ng-controller='LinksController'>
+  <!-- <div id='recipes' ng-controller='LinksController'> -->
+    <div id='recipes'>
     <form id='searchForm' ng-submit='getLinks(recipeGet)'>
       <input class='recipe-search' type='text' ng-model='recipeGet' style='font-size:14px' placeholder='Search for a recipe!'>
       <input class='recipe-submit' type='submit' id='submit' value='Submit'>
@@ -14,19 +15,23 @@
     <div class='recipe-list' style='overflow:scroll; height:400px'>
     <div ng-repeat='data in repeatData'>
       <br><a href='http://yummly.com/recipe/{{data.links}}' target='_blank'>{{data.recipes}}</a>
-      <button id='save'>Save</button>
-      <button id='cook' ng-click='getIngredients(data)'>Cook!</button></br>
+      <button id='save' style='font-size:13px' ng-click='saveRecipes(data)'>Save</button>
+      <button id='cook' style='font-size:13px' ng-click='getIngredients(data)'>Cook!</button></br>
     </div>
   </div>
   </div>
 
   <div id='ingredients'>
-    <div class='ingredient-list' style='overflow:scroll; height400px'>
+    <div class='ingredient-list' style='overflow:scroll; height:400px'>
     </div>
   </div>
 
   <div id='recipe-book'>
     <div class='saved-recipes'>
+    <div ng-repeat='data in savedRecipes'>
+      <span class="recipe-left">
+        <a href='http://yummly.com/recipe/{{data.url}}' target='_blank'><img src='{{data.image}}'></a>
+      </span>
     </div>
   </div>
 </div>
