--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 
 <body>
-  <div class='ingredients-recipes-box' ng-controller='LinksController'>
+  <div class='ingredients-recipes-box' ng-controller='LinksController' ng-init="init()">
   <!-- <div id='recipes' ng-controller='LinksController'> -->
     <div id='recipes'>
     <form id='searchForm' ng-submit='getLinks(recipeGet)'>
